--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -378,7 +378,7 @@ body.show-menu #navigation .container .nav-menu .log a.btn:hover{
 
 #services .container .col-b .cards{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1fr);
     gap: .5rem;
 }
 
@@ -389,7 +389,7 @@ body.show-menu #navigation .container .nav-menu .log a.btn:hover{
     flex-direction: column;
     gap: 2.4rem;
     text-align: center;
-    padding: 3rem;
+    padding: 2rem;
     cursor: pointer;
     transition: background-color .3s ease-in-out;
 }
@@ -415,7 +415,7 @@ body.show-menu #navigation .container .nav-menu .log a.btn:hover{
 
 #services .container .col-b .cards .card .card-body h3,
 #services .container .col-b .cards .card .card-body h2{
-    color: var(--detail-color)
+    color: var(--detail-color);
 }
 
 /* Feature */
@@ -489,11 +489,11 @@ body.show-menu #navigation .container .nav-menu .log a.btn:hover{
 #resources .container .col-b .gallery .gallery-item .label-img,
 #resources .container .col-b .gallery .gallery-item .label-img{
     position: absolute;
-    padding: 1rem;
+    padding: 1.5rem;
     left: 0;
-    bottom: 0;
+    bottom: 5px;
     width: 100%;
-    height:80px;
+    height: 80px;
     background: rgb(128,128,128);
     background: linear-gradient(360deg, rgba(5,24,33,1) 0%, rgba(0,0,0,0.4430147058823529) 100%);
 
